[package]
name = "clcache"
version = "0.1.0"
authors = ["gnieto <gnieto.talo@gmail.com>"]

[lib]
name = "clcache"
crate-type = ["staticlib", "rlib"]

[dependencies.opencl]
git = "https://github.com/luqmana/rust-opencl"

[dependencies]
rust-crypto = "*"
libc = "*"
ansi_term = "*"
regex = "0.1.41"
yaml-rust = "*"
log = "0.3"
env_logger = "0.3"

[dependencies.clap]
features = ["yaml"]